--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@storybook/test": "^8.2.9",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
+    "@types/node": "^22.5.4",
     "@types/react": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.4.0",
     "@typescript-eslint/parser": "^8.4.0",
