--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
     "target": "ES5",
     "useDefineForClassFields": true, // 
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
@@ -18,6 +19,9 @@
     "noUnusedParameters": true, // 检查未使用的参数
     "noFallthroughCasesInSwitch": true, // 检查 switch 语句中没有 fallthrough 的情况
     "declaration": true, // 生成声明文件
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src"],
   "exclude": [
